# Python_Screenshot

./: .gitignore  README.md  pyproject.toml  screenshotmodule.cpp  setup.py  test.py
